// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categories snapshots disabled 1`] = `
<WithStyles(GridContent)
  columns={1}
  rows={2}
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "category label",
          }
        }
        key="category-label-0-0"
      />
      <WithStyles(Category)
        choices={Array []}
        disabled={true}
        id="1"
        key="category-element-0-0"
        label="category label"
        onDropChoice={[Function]}
        onRemoveChoice={[MockFunction]}
      />
    </div>
  </div>
</WithStyles(GridContent)>
`;

exports[`categories snapshots renders 1`] = `
<WithStyles(GridContent)
  columns={1}
  rows={2}
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "category label",
          }
        }
        key="category-label-0-0"
      />
      <WithStyles(Category)
        choices={Array []}
        id="1"
        key="category-element-0-0"
        label="category label"
        onDropChoice={[Function]}
        onRemoveChoice={[MockFunction]}
      />
    </div>
  </div>
</WithStyles(GridContent)>
`;
